Remove some usages of `StringUtils`